--- a/huang/assignments/css/movies.css
+++ b/huang/assignments/css/movies.css
@@ -5,7 +5,7 @@
      Date: 10/13/2017
  */
 
- html {
+html {
     width: 100%;
     height: 100%;
 }
@@ -110,7 +110,6 @@ nav a:hover {
     float: right;
     border-left: thin solid #A5D6F9;
     border-bottom: thin solid #A5D6F9;
-    background: url(../media/eevee3.png) repeat;
     background-size: contain;
 }
 
@@ -123,73 +122,6 @@ h2 {
     padding: 20px;
     color: #B72A6C;
 }
-form {
-    font-weight: bold;
-    max-width: 900px;
-    width: 100%;
-    margin: 53px;
-    padding-bottom: 40px;
-}
-
-fieldset {
-    border: 0;
-    margin-bottom: 15px;
-}
-
-.required p:after {
-    content: " *";
-    color: red;
-}
-
-input[type=email]:valid {
-    background-color:lightgreen;
-}
-
-input[type=email]:invalid {
-    background-color:lightpink;
-}
-
-input[type=radio]:checked {
-    box-shadow: 0 0 0 3px lightblue;
-    color: red;
-}
-
-.question {
-    display: flex;
-    flex-direction: column;
-}
-
-.question div{
-    height: 50px;
-    margin: 0;
-    display: block;
-}
-
-.question p {
-    width: 800px;
-    float: left;
-    margin: 0;
-}
-
-.question label {
-    display: inline-block;
-    margin: 0;
-}
-
-.submitbutton {
-    padding-top: 50px;
-}
-
-#recent-gifts {
-    border: thick solid #CF0037;
-    color: #CF0037;
-}
-
-#recent-gifts-title {
-    background-color: #FF6E91;
-    border: thin solid white;
-    border-radius: 10px;
-}
 
 #movies {
     margin: 2px;
@@ -198,8 +130,27 @@ input[type=radio]:checked {
     border-radius: 10px;
 }
 
-#movie-table tr, td, th {
-    border: 1px solid black;
+#movie-table {
+    border-collapse: collapse;
+    margin: 30px auto;
+
+}
+
+#movie-table tr, th {
+    border: 1px solid darkred;
+}
+
+#movie-table td {
+    border: 1px solid darkred;
+    height: 200px;
+}
+
+.movie-cover {
+    width: 300px;
+}
+.movie-img {
+    width: 70%;
+    padding-left: 45px;
 }
 
 /* footer section */
