--- a/huang/assignments/css/movies.css
+++ b/huang/assignments/css/movies.css
@@ -110,6 +110,7 @@ nav a:hover {
     float: right;
     border-left: thin solid #A5D6F9;
     border-bottom: thin solid #A5D6F9;
+    background-color: white;
     background-size: contain;
 }
 
