--- a/huang/assignments/css/index.css
+++ b/huang/assignments/css/index.css
@@ -220,12 +220,12 @@ iframe {
     margin: 30px auto;
 }
 
-thead {
+#deliver-gifts thead {
     background-color: black;
     color: white;
 }
 
-th, td {
+#deliver-gifts th, #deliver-gifts td {
     font-style: italic;
     font-weight: bold;
     border: 1px solid black;
@@ -478,4 +478,29 @@ footer p {
         border: 0; 
         margin: 0;
     }
+}
+
+/* styles for calendar */
+#calendar table, #calendar th, #calendar td {
+    font-size: 0.8em;
+    border: 1px solid black;
+}
+
+#calendar th, #calendar td {
+    vertical-align: top;
+    border: none;
+}
+
+#calendar th{
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+}
+
+#calendar tr:nth-of-type(even) {
+    background-color: #F3F3F3;
+}
+
+#calendar tr:nth-of-type(odd) {
+    background-color:#ddd;
 }
