--- a/huang/assignments/css/order.css
+++ b/huang/assignments/css/order.css
@@ -1,10 +1,3 @@
-/*
-     Filename: index.css
-
-     Author: Xin Huang
-     Date: 10/13/2017
- */
-
 html {
     width: 100%;
     height: 100%;
@@ -124,35 +117,86 @@ h2 {
     color: #B72A6C;
 }
 
-#movies {
-    margin: 2px;
-    background-color: #FFCFDB;
-    border: thin solid #FF6E91;
-    border-radius: 10px;
+form {
+    font-weight: bold;
+    max-width: 900px;
+    width: 100%;
+    margin: 53px;
+    padding-bottom: 40px;
 }
 
-#movie-table {
+fieldset {
+    border: 0;
+    margin-bottom: 15px;
+}
+
+label {
+    display: block;
+}
+.required p {
+    display: inline-block;
+}
+
+.required p:after {
+    content: " *";
+    color: red;
+}
+
+input:valid {
+    background-color: #ccffdd;
+}
+
+input:invalid {
+    background-color: #ffe6ee;
+}
+
+input[type=radio]:checked {
+    box-shadow: 0 0 0 3px lightblue;
+    color: red;
+}
+
+input[type=submit] {
+    background-color: #f2f2f2;
+    font-weight: bold;
+}
+
+.question div{
+    height: 50px;
+    margin: 0;
+    display: block;
+}
+
+.question p {
+    width: 800px;
+    float: left;
+    margin: 0;
+}
+
+.question label {
+    display: inline-block;
+    margin: 0;
+}
+
+.submitbutton {
+    padding-top: 50px;
+}
+
+table,
+#order tr,
+#order td {
+    border: 2px solid black;
+    text-align: right;
+    margin: 5px;
     border-collapse: collapse;
-    margin: 30px auto;
-
 }
 
-#movie-table tr, th {
-    border: 1px solid darkred;
+#order th {
+    border: 2px solid black;
+    text-align: center;
+    margin: 5px;
+    border-collapse: collapse;
 }
 
-#movie-table td {
-    border: 1px solid darkred;
-    height: 200px;
-}
-
-.movie-cover {
-    width: 300px;
-}
-.movie-img {
-    width: 70%;
-    padding-left: 45px;
-}
 
 /* footer section */
 footer {
